Show a loading UI when waiting for the sync consent screen to be ready

Bug: 837577
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I709b737af4e8b77de40be4f2798681ffa45532b4
Reviewed-on: https://chromium-review.googlesource.com/1097948
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567117}