chrome/browser/chromeos/login/screens/sync_consent_screen_view.h
@@ -27,6 +27,10 @@ class SyncConsentScreenView {
 
   // Hides the contents of the screen.
   virtual void Hide() = 0;
+
+  // Controls if the loading throbber is visible. This is used when
+  // SyncScreenBehavior is unknown.
+  virtual void SetThrobberVisible(bool visible) = 0;
 };
 
 }  // namespace chromeos
