chrome/browser/ui/webui/chromeos/login/sync_consent_screen_handler.cc
@@ -86,6 +86,10 @@ void SyncConsentScreenHandler::Show() {
 
 void SyncConsentScreenHandler::Hide() {}
 
+void SyncConsentScreenHandler::SetThrobberVisible(bool visible) {
+  CallJS("setThrobberVisible", visible);
+}
+
 void SyncConsentScreenHandler::Initialize() {}
 
 void SyncConsentScreenHandler::GetAdditionalParameters(
