chrome/browser/ui/webui/chromeos/login/sync_consent_screen_handler.h
@@ -29,6 +29,7 @@ class SyncConsentScreenHandler : public BaseScreenHandler,
   void Bind(SyncConsentScreen* screen) override;
   void Show() override;
   void Hide() override;
+  void SetThrobberVisible(bool visible) override;
 
  private:
   // BaseScreenHandler:
